WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117798
[WinCairo] Does not compile.
https://bugs.webkit.org/show_bug.cgi?id=117798
Summary
[WinCairo] Does not compile.
peavo
Reported
2013-06-19 07:01:15 PDT
Some of the errors: WebFrameNetworkingContext.h(51): error C3668: 'WebFrameNetworkingContext::storageSession' : method with override specifier 'override' did not override any base class methods WebKitSystemInterface.h(74): error C2065: 'CGFloat' : undeclared identifier WebKitSystemInterface.h(74): error C2182: 'wkSetFontSmoothingContrast' : illegal use of type 'void'
Attachments
Patch
(2.54 KB, patch)
2013-06-19 07:27 PDT
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2013-06-19 07:27:19 PDT
Created
attachment 205005
[details]
Patch
Brent Fulgham
Comment 2
2013-06-19 10:53:12 PDT
Comment on
attachment 205005
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2013-06-19 11:06:14 PDT
Comment on
attachment 205005
[details]
Patch Clearing flags on attachment: 205005 Committed
r151742
: <
http://trac.webkit.org/changeset/151742
>
WebKit Commit Bot
Comment 4
2013-06-19 11:06:16 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug