[WinCairo] Does not compile. https://bugs.webkit.org/show_bug.cgi?id=117798

Patch by peavo@outlook.com <peavo@outlook.com> on 2013-06-19
Reviewed by Brent Fulgham.

Add USE(CFNETWORK) guards.

* WebCoreSupport/WebFrameNetworkingContext.cpp: Add USE(CFNETWORK) guard.
(WebFrameNetworkingContext::ensurePrivateBrowsingSession): Change USE(CF_NETWORK) to USE(CFNETWORK).
* WebCoreSupport/WebFrameNetworkingContext.h: Add USE(CFNETWORK) guard.

Canonical link: https://commits.webkit.org/135931@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151742 268f45cc-cd09-0410-ab3c-d52691b4dbfc